--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,29 @@ ul {
 a {
   text-decoration: none;
 }
+h2 {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+}
+h3 {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+}
+p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
 .logo {
   font-weight: 700;
   font-size: 18px;
@@ -19,6 +42,7 @@ a {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  font-family: "Raleway", sans-serif;
 }
 .logo-part {
   color: #2e2f42;
@@ -30,12 +54,16 @@ a {
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
+.Contacts {
+  font-style: normal;
+}
 .Contacts-link {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  font-style: normal;
 }
 .nav-link:hover,
 .nav-link:focus,
@@ -61,7 +89,7 @@ a {
 .header1 {
   font-weight: 700;
   font-size: 56px;
-  line-height: 1.1;
+  line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
@@ -69,8 +97,13 @@ a {
 .button-section1 {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background: #4d5ae5;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
 }
-.button-section1:hover {
+.button-section1:hover .button-section1:focus {
   background-color: #404bbf;
 }
 .section3 {
@@ -79,7 +112,7 @@ a {
 .header2-section3 {
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.1;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
